--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -3,6 +3,10 @@ name: Terraform Azure Deployment
 on:
   workflow_dispatch:
 
+permissions:
+  id-token: write
+  contents: read
+
 jobs:
   terraform:
     name: Terraform Workflow
