--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -36,9 +36,11 @@ jobs:
       - name: 📦 Azure CLI Login
         uses: azure/login@v1
         with:
+          auth-type: "SERVICE_PRINCIPAL"
           client-id: ${{ secrets.AZURE_CLIENT_ID }}
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          client-secret: ${{ secrets.AZURE_CLIENT_SECRET }}
 
       - name: 🏗️ Bootstrap Terraform State Storage
         run: |
