--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -41,8 +41,8 @@ jobs:
       - name: 🏗️ Bootstrap Terraform State Storage
         run: |
           az group create --name tfstate-rg --location australiaeast
-          az storage account create --name tfstateaccount-beawart --resource-group tfstate-rg --location australiaeast --sku Standard_LRS
-          az storage container create --name tfstate --account-name tfstateaccount-beawart
+          az storage account create --name tfstateaccount15082025beawart --resource-group tfstate-rg --location australiaeast --sku Standard_LRS
+          az storage container create --name tfstate --account-name tfstateaccount15082025beawart
 
       - name: 📦 Terraform Init with Backend
         run: terraform init
