--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -49,6 +49,7 @@ jobs:
       - name: 📦 Terraform Init with Backend
         run: terraform init
         env:
+          TF_LOG: DEBUG
           ARM_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
           ARM_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
           ARM_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
