--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -16,17 +16,12 @@ jobs:
     environment: production
 
     env:
-      AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
-      AZURE_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
-      AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
-      AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+      ARM_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
+      ARM_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
+      ARM_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
+      ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
     steps:
-      - name: 🧪 Debug Secrets (masked)
-        run: |
-          echo "Client ID: ${{ secrets.AZURE_CLIENT_ID }}"
-          echo "Tenant ID: ${{ secrets.AZURE_TENANT_ID }}"
-
       - name: 🧾 Checkout code
         uses: actions/checkout@v3
 
