--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -1,16 +1,10 @@
-name: Terraform Azure Deployment
+name: Terraform CI/CD
 
 on:
   push:
     branches:
       - main
   pull_request:
-    branches:
-      - main
-
-permissions:
-  contents: read
-  id-token: write
 
 env:
   ARM_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
@@ -36,7 +30,7 @@ jobs:
         run: terraform init
 
       - name: Upload Terraform Init Artifacts
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: terraform-init
           path: |
@@ -58,7 +52,7 @@ jobs:
           terraform_version: 1.6.0
 
       - name: Download Terraform Init Artifacts
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: terraform-init
 
@@ -66,7 +60,7 @@ jobs:
         run: terraform plan -out=tfplan
 
       - name: Upload Plan File
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: tfplan
           path: tfplan
@@ -87,7 +81,7 @@ jobs:
           terraform_version: 1.6.0
 
       - name: Download Plan File
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: tfplan
 
