--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -5,11 +5,13 @@ on:
     branches:
       - main
   pull_request:
+
 env:
   ARM_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
   ARM_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
   ARM_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
   ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+
 jobs:
   terraform-init:
     name: Terraform Init
@@ -55,6 +57,9 @@ jobs:
         with:
           terraform_version: 1.6.0
 
+      - name: Reinitialize Backend
+        run: terraform init -reconfigure
+
       - name: Terraform Plan
         run: terraform plan -out=tfplan
 
@@ -84,6 +89,9 @@ jobs:
         uses: hashicorp/setup-terraform@v3
         with:
           terraform_version: 1.6.0
+
+      - name: Reinitialize Backend
+        run: terraform init -reconfigure
 
       - name: Terraform Apply
         run: terraform apply -auto-approve tfplan
