updated storage account and manual step for wrkflow

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -74,6 +74,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: terraform-plan
     if: github.ref == 'refs/heads/main'
+    environment:
+      name: production # 👈 triggers manual approval
 
     steps:
       - name: Checkout Code
