--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -46,6 +46,8 @@ jobs:
     name: Terraform Plan
     runs-on: ubuntu-latest
     needs: terraform-init
+    outputs:
+      changes_detected: ${{ steps.check-plan.outputs.changes }}
 
     steps:
       - name: Checkout Code
@@ -74,11 +76,22 @@ jobs:
           name: terraform-plan
           path: tfplan
 
+      - name: Check for Changes
+        id: check-plan
+        run: |
+          if grep -q "No changes. Infrastructure is up-to-date." plan_output.txt; then
+            echo "No changes detected."
+            echo "changes=false" >> $GITHUB_OUTPUT
+          else
+            echo "Changes detected."
+            echo "changes=true" >> $GITHUB_OUTPUT
+          fi
+
   terraform-apply:
     name: Terraform Apply
     runs-on: ubuntu-latest
     needs: terraform-plan
-    if: github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/main' && needs.terraform-plan.outputs.changes_detected == 'true' # 👈 Only run if changes exist
     environment:
       name: production # 👈 triggers manual approval
 
