--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -26,6 +26,8 @@ jobs:
       - uses: hashicorp/setup-terraform@v3
         with:
           terraform_version: 1.6.0
+      - name: Terraform Init
+        run: terraform init -backend=false
       - name: Validate Terraform
         run: terraform validate
       - name: ✅ Validation Summary
