--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -8,14 +8,14 @@ on:
   workflow_dispatch:
     inputs:
       action:
-        description: 'Select the pipeline action to run'
+        description: "Select the pipeline action to run"
         required: true
         type: choice
         options:
           - plan-apply
           - destroy
       confirm_destroy:
-        description: 'Type YES to confirm destroy (only required if action=destroy)'
+        description: "Type YES to confirm destroy (only required if action=destroy)"
         required: false
 
 env:
@@ -141,9 +141,10 @@ jobs:
 
   terraform-apply:
     name: Terraform Apply
-    if: (github.event_name != 'workflow_dispatch' || github.event.inputs.action == 'plan-apply') &&
-        github.ref == 'refs/heads/main' &&
-        needs.terraform-plan.outputs.changes_detected == 'true'
+    if:
+      (github.event_name != 'workflow_dispatch' || github.event.inputs.action == 'plan-apply') &&
+      github.ref == 'refs/heads/main' &&
+      needs.terraform-plan.outputs.changes_detected == 'true'
     runs-on: ubuntu-latest
     needs: terraform-plan
     environment:
@@ -166,13 +167,15 @@ jobs:
 
   apply-skipped:
     name: Apply Skipped Notice
-    if: (github.event_name != 'workflow_dispatch' || github.event.inputs.action == 'plan-apply') &&
-        needs.terraform-plan.outputs.changes_detected == 'false'
+    if:
+      (github.event_name != 'workflow_dispatch' || github.event.inputs.action == 'plan-apply') &&
+      needs.terraform-plan.outputs.changes_detected == 'false'
     runs-on: ubuntu-latest
     needs: terraform-plan
     steps:
       - name: Log Skipped Apply
-        run: echo "Terraform apply skipped: No infrastructure changes detected." >> $GITHUB_STEP_SUMMARY
+        run: |
+          echo "Terraform apply skipped: No infrastructure changes detected." >> $GITHUB_STEP_SUMMARY
 
   # -------------------------
   # DESTROY CHAIN
@@ -180,8 +183,8 @@ jobs:
   terraform-destroy:
     name: Terraform Destroy
     if: github.event_name == 'workflow_dispatch' &&
-        github.event.inputs.action == 'destroy' &&
-        github.event.inputs.confirm_destroy == 'YES'
+      github.event.inputs.action == 'destroy' &&
+      github.event.inputs.confirm_destroy == 'YES'
     runs-on: ubuntu-latest
     needs: pipeline-start
     environment:
@@ -201,10 +204,11 @@ jobs:
   destroy-skipped:
     name: Destroy Skipped Notice
     if: github.event_name == 'workflow_dispatch' &&
-        github.event.inputs.action == 'destroy' &&
-        github.event.inputs.confirm_destroy != 'YES'
+      github.event.inputs.action == 'destroy' &&
+      github.event.inputs.confirm_destroy != 'YES'
     runs-on: ubuntu-latest
     needs: pipeline-start
     steps:
       - name: Log Destroy Skipped
-        run: echo "⚠️ Destroy skipped: Confirmation string not provided or incorrect." >> $GITHUB_STEP_SUMMARY
+        run: |
+          echo "⚠️ Destroy skipped: Confirmation string not provided or incorrect." >> $GITHUB_STEP_SUMMARY
