--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -71,6 +71,7 @@ jobs:
     name: Terraform Init
     if: github.event_name != 'workflow_dispatch' || github.event.inputs.action == 'plan-apply'
     runs-on: ubuntu-latest
+    environment: production
     needs: terraform-validate
     steps:
       - uses: actions/checkout@v4
@@ -93,6 +94,7 @@ jobs:
     name: Terraform Plan
     if: github.event_name != 'workflow_dispatch' || github.event.inputs.action == 'plan-apply'
     runs-on: ubuntu-latest
+    environment: production
     needs: terraform-init
     outputs:
       changes_detected: ${{ steps.check-plan.outputs.changes }}
