--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -19,15 +19,11 @@ on:
         required: false
 
 env:
-  ARM_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
-  ARM_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
-  ARM_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
-  ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
   TF_VAR_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
 jobs:
   # -------------------------
-  # META JOB - ALWAYS FIRST
+  # META JOB
   # -------------------------
   pipeline-start:
     name: 🚦 Pipeline Start
@@ -48,7 +44,7 @@ jobs:
           fi
 
   # -------------------------
-  # PLAN/APPLY CHAIN
+  # VALIDATE (always safe)
   # -------------------------
   terraform-validate:
     name: Terraform Validate
@@ -67,54 +63,66 @@ jobs:
       - name: ✅ Validation Summary
         run: echo "Terraform configuration validated successfully." >> $GITHUB_STEP_SUMMARY
 
-  terraform-init:
-    name: Terraform Init
-    if: github.event_name != 'workflow_dispatch' || github.event.inputs.action == 'plan-apply'
+  # -------------------------
+  # PLAN FOR PRs (dummy backend, no secrets)
+  # -------------------------
+  terraform-plan-pr:
+    name: Terraform Plan (PR - Dummy Backend)
+    if: github.event_name == 'pull_request'
     runs-on: ubuntu-latest
-    environment: ci
     needs: terraform-validate
     steps:
       - uses: actions/checkout@v4
       - uses: hashicorp/setup-terraform@v3
         with:
           terraform_version: 1.6.0
-      - name: Terraform Init
-        run: terraform init -reconfigure
-      - name: Upload Init Artifacts
-        uses: actions/upload-artifact@v4
+      - name: Terraform Init (no backend)
+        run: terraform init -backend=false
+      - name: Terraform Plan (no backend)
+        run: |
+          terraform plan -no-color -input=false > plan_output.txt || true
+      - name: Comment Plan Summary on PR
+        uses: actions/github-script@v7
         with:
-          name: terraform-init
-          path: |
-            .
-            !.git/
-      - name: ✅ Init Summary
-        run: echo "Terraform initialized and artifacts uploaded." >> $GITHUB_STEP_SUMMARY
+          script: |
+            const fs = require('fs');
+            const plan = fs.readFileSync('plan_output.txt', 'utf8');
+            github.rest.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: `### Terraform (Dummy) Plan Output\n\`\`\`\n${plan}\n\`\`\``
+            });
 
-  terraform-plan:
-    name: Terraform Plan
-    if: github.event_name != 'workflow_dispatch' || github.event.inputs.action == 'plan-apply'
+  # -------------------------
+  # PLAN FOR MAIN (real backend, secrets)
+  # -------------------------
+  terraform-plan-main:
+    name: Terraform Plan (Main - Real Backend)
+    if: (github.event_name == 'push' && github.ref == 'refs/heads/main') ||
+      (github.event_name == 'workflow_dispatch' && github.event.inputs.action == 'plan-apply')
     runs-on: ubuntu-latest
     environment: ci
-    needs: terraform-init
+    needs: terraform-validate
+    env:
+      ARM_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
+      ARM_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
+      ARM_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
+      ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
     outputs:
       changes_detected: ${{ steps.check-plan.outputs.changes }}
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/download-artifact@v4
-        with:
-          name: terraform-init
-          path: .
       - uses: hashicorp/setup-terraform@v3
         with:
           terraform_version: 1.6.0
-      - name: Terraform Init
+      - name: Terraform Init (real backend)
         run: terraform init -reconfigure
-      - name: Terraform Plan
+      - name: Terraform Plan (real backend)
         run: |
           terraform plan -out=tfplan
           terraform show -no-color tfplan > plan_output.txt
-      - name: Upload Plan Artifact
-        uses: actions/upload-artifact@v4
+      - uses: actions/upload-artifact@v4
         with:
           name: terraform-plan
           path: tfplan
@@ -126,37 +134,25 @@ jobs:
           else
             echo "changes=true" >> $GITHUB_OUTPUT
           fi
-
-      - name: Comment Plan Summary on PR
-        if: github.event_name == 'pull_request'
-        uses: actions/github-script@v7
-        with:
-          script: |
-            const fs = require('fs');
-            const plan = fs.readFileSync('plan_output.txt', 'utf8');
-            github.rest.issues.createComment({
-              issue_number: context.issue.number,
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              body: `### Terraform Plan Summary\n\`\`\`\n${plan}\n\`\`\``
-            });
-
       - name: ✅ Plan Summary
-        run: |
-          echo "### Terraform Plan Output" >> $GITHUB_STEP_SUMMARY
-          echo "" >> $GITHUB_STEP_SUMMARY
-          cat plan_output.txt >> $GITHUB_STEP_SUMMARY
+        run: cat plan_output.txt >> $GITHUB_STEP_SUMMARY
 
+  # -------------------------
+  # APPLY (only on main, gated)
+  # -------------------------
   terraform-apply:
     name: Terraform Apply
-    if:
-      (github.event_name != 'workflow_dispatch' || github.event.inputs.action == 'plan-apply') &&
-      github.ref == 'refs/heads/main' &&
-      needs.terraform-plan.outputs.changes_detected == 'true'
+    if: github.ref == 'refs/heads/main' &&
+      needs.terraform-plan-main.outputs.changes_detected == 'true'
     runs-on: ubuntu-latest
-    needs: terraform-plan
+    needs: terraform-plan-main
     environment:
       name: production
+    env:
+      ARM_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
+      ARM_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
+      ARM_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
+      ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
     steps:
       - uses: actions/checkout@v4
       - uses: actions/download-artifact@v4
@@ -175,20 +171,8 @@ jobs:
       - name: ✅ Apply Summary
         run: echo "Terraform apply executed successfully." >> $GITHUB_STEP_SUMMARY
 
-  apply-skipped:
-    name: Apply Skipped Notice
-    if:
-      (github.event_name != 'workflow_dispatch' || github.event.inputs.action == 'plan-apply') &&
-      needs.terraform-plan.outputs.changes_detected == 'false'
-    runs-on: ubuntu-latest
-    needs: terraform-plan
-    steps:
-      - name: Log Skipped Apply
-        run: |
-          echo "Terraform apply skipped: No infrastructure changes detected." >> $GITHUB_STEP_SUMMARY
-
   # -------------------------
-  # DESTROY CHAIN
+  # DESTROY (manual only)
   # -------------------------
   terraform-destroy:
     name: Terraform Destroy
@@ -199,6 +183,11 @@ jobs:
     needs: pipeline-start
     environment:
       name: production
+    env:
+      ARM_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
+      ARM_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
+      ARM_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
+      ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
     steps:
       - uses: actions/checkout@v4
       - uses: hashicorp/setup-terraform@v3
@@ -208,17 +197,3 @@ jobs:
         run: terraform init -reconfigure
       - name: Terraform Destroy
         run: terraform destroy -auto-approve
-      - name: ⚠️ Destroy Summary
-        run: echo "Terraform destroy executed manually." >> $GITHUB_STEP_SUMMARY
-
-  destroy-skipped:
-    name: Destroy Skipped Notice
-    if: github.event_name == 'workflow_dispatch' &&
-      github.event.inputs.action == 'destroy' &&
-      github.event.inputs.confirm_destroy != 'YES'
-    runs-on: ubuntu-latest
-    needs: pipeline-start
-    steps:
-      - name: Log Destroy Skipped
-        run: |
-          echo "⚠️ Destroy skipped: Confirmation string not provided or incorrect." >> $GITHUB_STEP_SUMMARY
