--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -95,7 +95,7 @@ jobs:
   # PLAN FOR MAIN
   # -------------------------
   terraform-plan-main:
-    name: Terraform Plan (Main - Real Backend)
+    name: Terraform Plan
     if: (github.event_name == 'push' && github.ref == 'refs/heads/main') ||
       (github.event_name == 'workflow_dispatch' && github.event.inputs.action == 'plan-apply')
     runs-on: ubuntu-latest
@@ -107,7 +107,7 @@ jobs:
       ARM_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
       ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
       TF_VAR_subscription_id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-      TF_VAR_admin_password: ${{ secrets.ADMIN_PASSWORD }}
+      TF_VAR_admin_ssh_public_key: ${{ secrets.VM_SSH_PUBLIC_KEY }}
     outputs:
       changes_detected: ${{ steps.check-plan.outputs.changes }}
     steps:
